# foundation-models-from-scratch

./: .gitignore  README.md  pyproject.toml
cloud/: README.md  drive_manager.py  google_drive.py  health_check.py  simple_demo.py
configs/: gpt2_35m_4heads_12layers_finetuning.yaml  gpt_124m.yaml
notebooks/: clean_data.ipynb  instruct-finetuning.ipynb  load_model.ipynb  streaming_data.ipynb  test.ipynb  testing_func.ipynb
scripts/: generate_data.py  infere.py  train.py  train_instruct.py
src/: config.py
src/data/: dataloader.py  datasets.py  tokenizer.py
src/models/: gpt.py  layers.py
src/training/: evaluate.py  generate.py  plotting.py  trainer.py
src/visualization/: collector.py  printer.py
tests/: datasets_test.py  stream_data.py  upload.py
