[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Building Large Language Models from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "tiktoken",
    "ruff",
    "pyyaml",
    "structlog",
    "numpy",
    "torch>=2.8.0",
    "matplotlib",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "types-google-cloud-ndb>=2.3.0.20250317",
    "types-requests>=2.32.4.20250913",
    "google-auth-stubs>=0.3.0",
]
