[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Building Large Language Models from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "tiktoken",
    "ruff",
    "pyyaml",
    "structlog",
    "numpy",
    "torch",
    "matplotlib",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "types-google-cloud-ndb",
    "types-requests",
    "google-auth-stubs",
    "tqdm",
    "tensorboard",
    "datasets"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
